--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,7 +11,10 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z"/>
+            <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z"/>
+          </svg></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,6 +26,12 @@
               <% if (user) { %>
               <li class="nav-item">
                 <a class="nav-link" href="/auth/sign-out">Sign Out</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/listings/index">View all listings </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/listings/new">Add new </a>
               </li>
               <% } else { %>
               <li class="nav-item">
