--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,9 +1,9 @@
 <%- include('../partials/head') %>
     <div class="container">
         <h1>Add a new listings </h1>
-        <form action="/listings" method="post">
+        <form action="/listings" method="POST">
             <label for=""> Street Address:</label>
-            <input type="text" name="street" placeholder="Enter your street address">
+            <input type="text" name="streetAddress" placeholder="Enter your street address">
             <label for=""> City:</label>
             <input type="text" name="city" placeholder="Enter your city">
             <label for=""> Price:</label>
