--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="/auth/sign-out">Sign Out</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/listings/index">View all listings </a>
+                <a class="nav-link" href="/listings">View all listings </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/listings/new">Add new </a>
