--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -10,7 +10,7 @@
             <input type="text" name="price" placeholder="Enter your price">
             <label for=""> Size:</label>
             <input type="text" name="size" placeholder="Enter your size">
-            <button type="submit" class="btn btn-primary">Add</button>
+            <button type="submit" class="btn btn-primary">Add Listing</button>
         </form>
 
     </div>
