add  update and edit

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -10,6 +10,8 @@
             <input type="text" name="price" placeholder="Enter your price">
             <label for=""> Size:</label>
             <input type="text" name="size" placeholder="Enter your size">
+            <label for="">Image: </label>
+            <input type="text" name="imgUrl">
             <button type="submit" class="btn btn-primary">Add Listing</button>
         </form>
 
