--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -9,10 +9,11 @@
                 <p class="text-muted">Listed by: <%= listing.owner.username || 'Unknown' %></p>
                 <a href="/listings" class="btn btn-primary">Back to Listings</a>
                 <!-- <a href="/listings/<%= listing._id %>?_method=DELETE" class="btn btn-danger">Delete</a> -->
-                 <% if (listing.owner._id.equals(user._id)) { %>
-                    <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST">
+                <% if (listing.owner._id.equals(user._id)) { %>
+                    <form action="/listings/<%= user._id %>/<%= listing._id %>?_method=DELETE" method="POST">
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
+                    <a href="/listings/<%= user._id %>/<%= listing._id %>/edit">Edit this Listing</a>
                  <% } %>
             </div>
         </div>
