--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,12 +1,19 @@
 <%- include('../partials/head') %>
     <div class="container">
         <div class="card mt-2" style="width: 50vw;">
-            <img src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="card-img-top" alt="listing for <%= listing.streetAddress %>">
+            <img src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                class="card-img-top" alt="listing for <%= listing.streetAddress %>">
             <div class="card-body">
-                <h5 class="card-title">$<%= listing.price %></h5>
-                <p class="card-text"><%= listing.streetAddress %>, <%= listing.city %></p>
-                <p class="card-text"><%= listing.size %> m/sq</p>
-                <p class="text-muted">Listed by: <%= listing.owner.username || 'Unknown' %></p>
+                <h5 class="card-title">$<%= listing.price %>
+                </h5>
+                <p class="card-text">
+                    <%= listing.streetAddress %>, <%= listing.city %>
+                </p>
+                <p class="card-text">
+                    <%= listing.size %> m/sq
+                </p>
+                <p class="text-muted">Listed by: <%= listing.owner.username || 'Unknown' %>
+                </p>
                 <a href="/listings" class="btn btn-primary">Back to Listings</a>
                 <!-- <a href="/listings/<%= listing._id %>?_method=DELETE" class="btn btn-danger">Delete</a> -->
                 <% if (listing.owner._id.equals(user._id)) { %>
@@ -14,8 +21,20 @@
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
                     <a href="/listings/<%= user._id %>/<%= listing._id %>/edit">Edit this Listing</a>
-                 <% } %>
+                    <% } %>
             </div>
+
+            <h5>Favorites</h5>
+            <p class="card-text">Favorites by <%= listing.favoritedByUsers.length %> </p>
+            <% if (userHasFavorited) {%>
+                <p class="text-muted" > You have favorited this listing!</p>
+                <form action="/listings/<%= listing._id %>/favorited-by/<%= user._id %>?_method=DELETE" method="POST">
+                    <button type="submit" class="btn btn-info">Unfavorite</button>
+                <% } else { %>
+            <form action="/listings/<%= listing._id %>/favorited-by/<%= user._id %>" method="POST">
+                <button type="submit" class="btn btn-info">Favorite it!</button>
+            </form>
+            <% } %>
         </div>
     </div>
-<%- include('../partials/footer') %>
+    <%- include('../partials/footer') %>
